--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -1,5 +1,7 @@
 name: CI
-on: [pull_request, workflow_dispatch]#,push
+on: 
+  pull_request:
+  workflow_dispatch:
 jobs:
   test:
     name: Run Tests
