--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -3,7 +3,7 @@ blank_issues_enabled: false
 contact_links:
   - name: Questions & Discussions 💬
     url: https://github.com/SamErde/DLLPickle/discussions
-    about: Please use GitHub discussions for any questions.
+    about: Please use GitHub discussions for any questions or suggestions.
   - name: Documentation 📚
     url: https://day3bits.com/DLLPickle
     about: Documentation for the DLLPickle project.
