--- a/.github/workflows/publish-to-psgallery.yml
+++ b/.github/workflows/publish-to-psgallery.yml
@@ -4,12 +4,12 @@ on:
   release:
     types: [published]
   workflow_dispatch:
-    inputs:
-      dry_run:
-        description: 'Run in dry-run mode (do not actually publish)'
-        required: false
-        type: boolean
-        default: true
+#    inputs:
+#      dry_run:
+#        description: 'Run in dry-run mode (do not actually publish)'
+#        required: false
+#        type: boolean
+#        default: true
 
 permissions:
   contents: read
@@ -42,12 +42,7 @@ jobs:
         run: |
           $manifestPath = './DLLPickle/DLLPickle.psd1'
           Write-Host "Validating module manifest: $manifestPath"
-
           $manifest = Test-ModuleManifest -Path $manifestPath -ErrorAction Stop
-          Write-Host "Module Name: $($manifest.Name)"
-          Write-Host "Module Version: $($manifest.Version)"
-          Write-Host "Module Author: $($manifest.Author)"
-          Write-Host "Module Description: $($manifest.Description)"
 
           # Check if this is a prerelease
           $manifestContent = Get-Content $manifestPath -Raw
@@ -65,7 +60,6 @@ jobs:
           Write-Host "Installing required modules..."
           Install-Module -Name PowerShellGet -Force -Scope CurrentUser -AllowClobber
           Import-Module PowerShellGet
-          Write-Host "PowerShellGet version: $((Get-Module PowerShellGet).Version)"
 
       - name: Publish Module to PowerShell Gallery
         shell: pwsh
@@ -73,16 +67,6 @@ jobs:
           PSGALLERY_API_KEY: ${{ secrets.PSGALLERY_API_KEY }}
         run: |
           $ErrorActionPreference = 'Stop'
-
-          # Check for dry-run mode
-          $dryRun = '${{ github.event.inputs.dry_run }}' -eq 'true'
-          $isManualRun = '${{ github.event_name }}' -eq 'workflow_dispatch'
-
-          if ($isManualRun -and $dryRun) {
-            Write-Host "=== DRY RUN MODE ===" -ForegroundColor Yellow
-            Write-Host "This is a dry run. The module will NOT be published to PowerShell Gallery."
-            Write-Host ""
-          }
 
           # Verify API key is present
           if ([string]::IsNullOrWhiteSpace($env:PSGALLERY_API_KEY)) {
@@ -99,7 +83,6 @@ jobs:
 
           Write-Host "Preparing to publish module: $($manifest.Name)"
           Write-Host "Version: $version"
-          Write-Host "Author: $($manifest.Author)"
 
           # Prepare publish parameters
           $publishParams = @{
@@ -110,72 +93,59 @@ jobs:
             Force       = $true
           }
 
-          if ($isManualRun -and $dryRun) {
+          Write-Host "Publishing module to PowerShell Gallery..." -ForegroundColor Green
+          try {
+            Publish-Module @publishParams
             Write-Host ""
-            Write-Host "Would publish with these parameters:" -ForegroundColor Yellow
-            Write-Host "  Path: $modulePath"
-            Write-Host "  Repository: PSGallery"
-            Write-Host "  Version: $version"
-            Write-Host ""
-            Write-Host "Skipping actual publish (dry-run mode)" -ForegroundColor Yellow
-          } else {
-            Write-Host ""
-            Write-Host "Publishing module to PowerShell Gallery..." -ForegroundColor Green
-
-            try {
-              Publish-Module @publishParams
-              Write-Host ""
-              Write-Host "✓ Module published successfully!" -ForegroundColor Green
-              Write-Host "View at: https://www.powershellgallery.com/packages/$($manifest.Name)/$version"
-            }
-            catch {
-              Write-Error "Failed to publish module: $_"
-              Write-Host "Error details: $($_.Exception.Message)"
-              exit 1
-            }
+            Write-Host "✓ Module published successfully!" -ForegroundColor Green
+            Write-Host "View at: https://www.powershellgallery.com/packages/$($manifest.Name)/$version"
+          }
+          catch {
+            Write-Error "Failed to publish module: $_"
+            Write-Host "Error details: $($_.Exception.Message)"
+            exit 1
           }
 
-      - name: Verify Publication (if not dry-run)
-        if: ${{ github.event.inputs.dry_run != 'true' }}
-        shell: pwsh
-        run: |
-          Write-Host "Waiting 30 seconds for PowerShell Gallery to update..."
-          Start-Sleep -Seconds 30
-
-          Write-Host "Verifying module is available in PowerShell Gallery..."
-
-          $moduleName = 'DLLPickle'
-          $maxAttempts = 5
-          $attempt = 1
-          $found = $false
-
-          while ($attempt -le $maxAttempts -and -not $found) {
-            Write-Host "Attempt $attempt of $maxAttempts..."
-
-            try {
-              $module = Find-Module -Name $moduleName -ErrorAction Stop
-              if ($module) {
-                Write-Host "✓ Module found in PowerShell Gallery!" -ForegroundColor Green
-                Write-Host "  Name: $($module.Name)"
-                Write-Host "  Version: $($module.Version)"
-                Write-Host "  Published: $($module.PublishedDate)"
-                $found = $true
-              }
-            }
-            catch {
-              Write-Host "Module not yet visible in gallery, waiting..."
-              if ($attempt -lt $maxAttempts) {
-                Start-Sleep -Seconds 15
-              }
-            }
-
-            $attempt++
-          }
-
-          if (-not $found) {
-            $msg = "Module was not found in PowerShell Gallery after "
-            $msg += "$maxAttempts attempts. This may be a temporary delay."
-            Write-Warning $msg
-            $url = "https://www.powershellgallery.com/packages/$moduleName"
-            Write-Host "Check manually at: $url"
-          }
+#      - name: Verify Publication
+#        shell: pwsh
+#        run: |
+#          Write-Host "Waiting 30 seconds for PowerShell Gallery to update..."
+#          Start-Sleep -Seconds 30
+#
+#          Write-Host "Verifying module is available in PowerShell Gallery..."
+#
+#          $moduleName = 'DLLPickle'
+#          $maxAttempts = 5
+#          $attempt = 1
+#          $found = $false
+#
+#          while ($attempt -le $maxAttempts -and -not $found) {
+#            Write-Host "Attempt $attempt of $maxAttempts..."
+#
+#            try {
+#              $module = Find-Module -Name $moduleName -ErrorAction Stop
+#              if ($module) {
+#                Write-Host "✓ Module found in PowerShell Gallery!" -ForegroundColor Green
+#                Write-Host "  Name: $($module.Name)"
+#                Write-Host "  Version: $($module.Version)"
+#                Write-Host "  Published: $($module.PublishedDate)"
+#                $found = $true
+#              }
+#            }
+#            catch {
+#              Write-Host "Module not yet visible in gallery, waiting..."
+#              if ($attempt -lt $maxAttempts) {
+#                Start-Sleep -Seconds 15
+#              }
+#            }
+#
+#            $attempt++
+#          }
+#
+#          if (-not $found) {
+#            $msg = "Module was not found in PowerShell Gallery after "
+#            $msg += "$maxAttempts attempts. This may be a temporary delay."
+#            Write-Warning $msg
+#            $url = "https://www.powershellgallery.com/packages/$moduleName"
+#            Write-Host "Check manually at: $url"
+#          }
