feat: Update VSCode configuration and tasks
- Added coverage gutters extension recommendation to .vscode/extensions.json.
- Enhanced .vscode/settings.json with additional PowerShell formatting options and script analysis settings.
- Updated .vscode/tasks.json to streamline PowerShell task commands and added new tasks for testing and building.
- Removed obsolete tasks and integrated Invoke-Build for task execution.
- Improved task organization and added input prompts for function testing.

chore: Revise changelog for clarity and structure

- Updated changelog format to align with Keep a Changelog standards.
- Documented changes for version 0.2.0, including framework switch and directory restructuring.

refactor: Restructure DLLPickle module files

- Changed DLLPickle.psd1 and DLLPickle.psm1 to reflect new file organization.
- Updated paths for MSAL DLLs from 'lib' to 'Assembly'.
- Removed unnecessary version tracking files from 'lib' directory.

docs: Update documentation and examples

- Corrected references in Add-MsalAssembly.md to reflect new folder structure.
- Enhanced README.md with clearer descriptions and updated asset paths.
- Removed outdated test scripts and build scripts to streamline the project.

cleanup: Remove unused files and directories

- Deleted obsolete test files and helper scripts to reduce clutter.
- Removed unnecessary version tracking files for MSAL dependencies.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -26,5 +26,5 @@
       ]
     }
   },
-  "postCreateCommand": "pwsh -c './build.ps1 -Task Init -Bootstrap'"
+  "postCreateCommand": "pwsh -c './Build.ps1 -Task Init -Bootstrap'"
 }
