--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,11 @@
 {
-    "files.trimTrailingWhitespace": true,
-    "files.insertFinalNewline": true,
     "editor.insertSpaces": true,
     "editor.tabSize": 4,
-    "powershell.codeFormatting.preset": "OTBS"
+    "files.insertFinalNewline": true,
+    // When enabled, will trim trailing whitespace when you save a file.
+    "files.trimTrailingWhitespace": true,
+    // specifies the PowerShell coding style used in this project (https://github.com/PoshCode/PowerShellPracticeAndStyle/issues/81)
+    "powershell.codeFormatting.preset": "OTBS",
+    // specifies the location of the explicitly ScriptAnalyzer settings file
+    "powershell.scriptAnalysis.settingsPath": "PSScriptAnalyzerSettings.psd1"
 }
