--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,3 +1,40 @@
+# https://www.mkdocs.org/user-guide/configuration/
+# https://www.mkdocs.org/user-guide/writing-your-docs/
+# https://www.mkdocs.org/user-guide/writing-your-docs/#writing-with-markdown
+# https://mkdocs.readthedocs.io/en/0.15.2/user-guide/writing-your-docs/
+# https://mkdocs.readthedocs.io/en/0.15.2/user-guide/styling-your-docs/
+# https://example-mkdocs-basic.readthedocs.io/en/latest/
+# https://github.com/mkdocs/mkdocs/blob/master/mkdocs.yml
+# mkdocs.yml
+
 site_name: DLLPickle
-repo_url: https://github.com/SamErde/DLLPickle
+# site_url:
+# repo_url:
+# repo_name:
+# edit_uri: edit/main/docs/
+# edit_uri_template:
+site_description: A PowerShell module that helps you get un-stuck from version conflicts (aka DLL pickle) that occur when using modules that depend on multiple versions of the same dependencies such as the Microsoft Authentication Librart (MSAL). # meta tag to the generated HTML header
+site_author: Sam Erde # meta tag to the generated HTML header
+# copyright:
+# remote_branch:
+# remote_name:
+# docs_dir: docs
+# site_dir:
+# extra_css:
+# extra_javascript:
+# extra_templates:
+# extra:
 theme: readthedocs
+# theme:
+#     name: readthedocs
+#     locale: en
+    # custom_dir: my_theme_customizations/
+    # static_templates:
+    #     - sitemap.html
+    # include_sidebar: true
+nav:
+  - Home: index.md
+  - Change Log: CHANGELOG.md
+  # - Functions:
+  #   - Function1: functions/function1.md
+
