--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -61,7 +61,7 @@
         {
             "label": ".",
             "type": "shell",
-            "command": "$PSVersionTable;Invoke-Build -Task . -File '${workspaceFolder}/src/${workspaceFolderBasename}.build.ps1'",
+            "command": "$PSVersionTable;Invoke-Build -Task . -File '${workspaceFolder}/src/${workspaceFolderBasename}.Build.ps1'",
             "problemMatcher": "$msCompile",
             "presentation": {
                 "echo": false,
@@ -75,7 +75,7 @@
         {
             "label": "TestLocal",
             "type": "shell",
-            "command": "Invoke-Build -Task TestLocal -File '${workspaceFolder}/src/${workspaceFolderBasename}.build.ps1'",
+            "command": "Invoke-Build -Task TestLocal -File '${workspaceFolder}/src/${workspaceFolderBasename}.Build.ps1'",
             "problemMatcher": "$msCompile",
             "presentation": {
                 "echo": false,
@@ -86,7 +86,7 @@
         {
             "label": "HelpLocal",
             "type": "shell",
-            "command": "Invoke-Build -Task HelpLocal -File '${workspaceFolder}/src/${workspaceFolderBasename}.build.ps1'",
+            "command": "Invoke-Build -Task HelpLocal -File '${workspaceFolder}/src/${workspaceFolderBasename}.Build.ps1'",
             "problemMatcher": "$msCompile",
             "presentation": {
                 "echo": false,
@@ -97,7 +97,7 @@
         {
             "label": "Clean",
             "type": "shell",
-            "command": "Invoke-Build -Task Clean -File '${workspaceFolder}/src/${workspaceFolderBasename}.build.ps1'",
+            "command": "Invoke-Build -Task Clean -File '${workspaceFolder}/src/${workspaceFolderBasename}.Build.ps1'",
             "problemMatcher": "$msCompile",
             "presentation": {
                 "echo": false,
@@ -108,7 +108,7 @@
         {
             "label": "ValidateRequirements",
             "type": "shell",
-            "command": "Invoke-Build -Task ValidateRequirements -File '${workspaceFolder}/src/${workspaceFolderBasename}.build.ps1'",
+            "command": "Invoke-Build -Task ValidateRequirements -File '${workspaceFolder}/src/${workspaceFolderBasename}.Build.ps1'",
             "problemMatcher": "$msCompile",
             "presentation": {
                 "echo": false,
@@ -120,7 +120,7 @@
             "label": "Analyze",
             "type": "shell",
             "problemMatcher": "$msCompile",
-            "command": "Invoke-Build -Task Analyze -File '${workspaceFolder}/src/${workspaceFolderBasename}.build.ps1'",
+            "command": "Invoke-Build -Task Analyze -File '${workspaceFolder}/src/${workspaceFolderBasename}.Build.ps1'",
             "presentation": {
                 "echo": false,
                 "showReuseMessage": false
@@ -130,7 +130,7 @@
         {
             "label": "AnalyzeTests",
             "type": "shell",
-            "command": "Invoke-Build -Task AnalyzeTests -File '${workspaceFolder}/src/${workspaceFolderBasename}.build.ps1'",
+            "command": "Invoke-Build -Task AnalyzeTests -File '${workspaceFolder}/src/${workspaceFolderBasename}.Build.ps1'",
             "problemMatcher": "$msCompile",
             "presentation": {
                 "echo": false,
@@ -141,7 +141,7 @@
         {
             "label": "FormattingCheck",
             "type": "shell",
-            "command": "Invoke-Build -Task FormattingCheck -File '${workspaceFolder}/src/${workspaceFolderBasename}.build.ps1'",
+            "command": "Invoke-Build -Task FormattingCheck -File '${workspaceFolder}/src/${workspaceFolderBasename}.Build.ps1'",
             "problemMatcher": "$msCompile",
             "presentation": {
                 "echo": false,
@@ -152,7 +152,7 @@
         {
             "label": "Test",
             "type": "shell",
-            "command": "Invoke-Build -Task Test -File '${workspaceFolder}/src/${workspaceFolderBasename}.build.ps1'",
+            "command": "Invoke-Build -Task Test -File '${workspaceFolder}/src/${workspaceFolderBasename}.Build.ps1'",
             "problemMatcher": "$msCompile",
             "presentation": {
                 "echo": false,
@@ -166,7 +166,7 @@
         {
             "label": "DevCC",
             "type": "shell",
-            "command": "Invoke-Build -Task DevCC -File '${workspaceFolder}/src/${workspaceFolderBasename}.build.ps1'",
+            "command": "Invoke-Build -Task DevCC -File '${workspaceFolder}/src/${workspaceFolderBasename}.Build.ps1'",
             "problemMatcher": "$msCompile",
             "presentation": {
                 "echo": false,
@@ -177,7 +177,7 @@
         {
             "label": "Build",
             "type": "shell",
-            "command": "Invoke-Build -Task Build -File '${workspaceFolder}/src/${workspaceFolderBasename}.build.ps1'",
+            "command": "Invoke-Build -Task Build -File '${workspaceFolder}/src/${workspaceFolderBasename}.Build.ps1'",
             "problemMatcher": "$msCompile",
             "presentation": {
                 "echo": false,
@@ -188,7 +188,7 @@
         {
             "label": "BuildNoIntegration",
             "type": "shell",
-            "command": "Invoke-Build -Task BuildNoIntegration -File '${workspaceFolder}/src/${workspaceFolderBasename}.build.ps1'",
+            "command": "Invoke-Build -Task BuildNoIntegration -File '${workspaceFolder}/src/${workspaceFolderBasename}.Build.ps1'",
             "problemMatcher": "$msCompile",
             "presentation": {
                 "echo": false,
@@ -199,7 +199,7 @@
         {
             "label": "IntegrationTest",
             "type": "shell",
-            "command": "Invoke-Build -Task IntegrationTest -File '${workspaceFolder}/src/${workspaceFolderBasename}.build.ps1'",
+            "command": "Invoke-Build -Task IntegrationTest -File '${workspaceFolder}/src/${workspaceFolderBasename}.Build.ps1'",
             "problemMatcher": "$msCompile",
             "presentation": {
                 "echo": false,
